--- a/imgui.ini
+++ b/imgui.ini
@@ -1,16 +1,111 @@
 [Window][Debug##Default]
-Pos=10,10
+Pos=10,19
 Size=400,400
 Collapsed=1
 
 [Window][FPS Display]
 Pos=10,10
-Size=72,48
+Size=134,53
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=46,99
+Pos=47,279
 Size=550,680
+Collapsed=0
+
+[Window][scop]
+Pos=35,41
+Size=476,232
+Collapsed=0
+
+[Window][Example: Console]
+Pos=60,60
+Size=520,600
+Collapsed=0
+
+[Window][Example: Log]
+Pos=247,175
+Size=500,400
+Collapsed=0
+
+[Window][Example: Simple layout]
+Pos=61,60
+Size=500,440
+Collapsed=0
+
+[Window][Example: Property editor]
+Pos=60,60
+Size=430,450
+Collapsed=0
+
+[Window][Example: Long text display]
+Pos=60,60
+Size=520,600
+Collapsed=0
+
+[Window][Example: Auto-resizing window]
+Pos=60,60
+Size=451,250
+Collapsed=0
+
+[Window][Example: Constrained Resize]
+Pos=60,60
+Size=200,112
+Collapsed=0
+
+[Window][Same title as another window##1]
+Pos=100,100
+Size=451,61
+Collapsed=0
+
+[Window][Same title as another window##2]
+Pos=100,200
+Size=451,61
+Collapsed=0
+
+[Window][###AnimatedTitle]
+Pos=100,300
+Size=247,48
+Collapsed=0
+
+[Window][Example: Custom rendering]
+Pos=296,189
+Size=485,414
+Collapsed=0
+
+[Window][Example: Documents]
+Pos=60,60
+Size=607,921
+Collapsed=0
+
+[Window][Dear ImGui Metrics/Debugger]
+Pos=255,29
+Size=339,307
+Collapsed=0
+
+[Window][Dear ImGui Debug Log]
+Pos=60,60
+Size=456,156
+Collapsed=0
+
+[Window][Dear ImGui Stack Tool]
+Pos=60,60
+Size=354,104
+Collapsed=0
+
+[Window][Dear ImGui Style Editor]
+Pos=60,60
+Size=339,1058
+Collapsed=0
+
+[Window][About Dear ImGui]
+Pos=60,60
+Size=570,126
+Collapsed=0
+
+[Window][Choose File##ChooseFileDlgKey]
+Pos=60,60
+Size=716,404
 Collapsed=0
 
 [Table][0xC9935533,3]
@@ -80,4 +175,12 @@ RefScale=13
 Column 0  Width=86
 Column 1  Width=86
 Column 2  Width=86
+
+[Table][0xD0F0C6E3,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xE5C5562E,4]
+RefScale=13
+Column 0  Sort=0v
 
