--- a/imgui.ini
+++ b/imgui.ini
@@ -14,7 +14,7 @@ Size=550,680
 Collapsed=0
 
 [Window][scop]
-Pos=35,41
+Pos=24,57
 Size=476,232
 Collapsed=0
 
@@ -104,7 +104,7 @@ Size=570,126
 Collapsed=0
 
 [Window][Choose File##ChooseFileDlgKey]
-Pos=60,60
+Pos=836,195
 Size=716,404
 Collapsed=0
 
@@ -181,6 +181,14 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Table][0xE5C5562E,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x0D7D13B5,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x15BCE5FC,4]
 RefScale=13
 Column 0  Sort=0v
 
