--- a/imgui.ini
+++ b/imgui.ini
@@ -5,7 +5,7 @@ Collapsed=0
 
 [Window][scop]
 Pos=60,60
-Size=273,199
+Size=350,273
 Collapsed=0
 
 [Window][Choose File##ChooseFileDlgKey]
@@ -26,6 +26,14 @@ RefScale=13
 Column 0  Sort=0v
 
 [Table][0x404E4C87,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x96AE50CC,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xC686C182,4]
 RefScale=13
 Column 0  Sort=0v
 
