[ADD] textures (bug)

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][scop]
-Pos=60,60
+Pos=87,75
 Size=350,273
 Collapsed=0
 
@@ -34,6 +34,34 @@ RefScale=13
 Column 0  Sort=0v
 
 [Table][0xC686C182,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x36613112,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xE8847AD5,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x1B9F3287,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x96FCB3B3,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x626FF556,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x7FC1B422,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xC86226A2,4]
 RefScale=13
 Column 0  Sort=0v
 
