--- a/imgui.ini
+++ b/imgui.ini
@@ -4,12 +4,12 @@ Size=400,400
 Collapsed=0
 
 [Window][scop]
-Pos=87,75
-Size=350,273
+Pos=60,75
+Size=337,453
 Collapsed=0
 
 [Window][Choose File##ChooseFileDlgKey]
-Pos=60,60
+Pos=856,354
 Size=499,348
 Collapsed=0
 
@@ -62,6 +62,50 @@ RefScale=13
 Column 0  Sort=0v
 
 [Table][0xC86226A2,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x5F97B516,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x5662A80D,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x86D19E93,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x95D2DC39,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xFCC462B6,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x854CBB17,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x193E1500,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xC9D8B377,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xDFD7D23A,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xFFD13723,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x3CB359EE,4]
 RefScale=13
 Column 0  Sort=0v
 
