Add cube model and material files

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,12 +4,12 @@ Size=400,400
 Collapsed=0
 
 [Window][scop]
-Pos=60,75
+Pos=62,78
 Size=337,453
 Collapsed=0
 
 [Window][Choose File##ChooseFileDlgKey]
-Pos=856,354
+Pos=856,408
 Size=499,348
 Collapsed=0
 
@@ -106,6 +106,266 @@ RefScale=13
 Column 0  Sort=0v
 
 [Table][0x3CB359EE,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xA8D33D17,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x4DF841BE,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xAC01F852,4]
+RefScale=13
+Column 0  Sort=0^
+
+[Table][0xC82183D2,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x3FD0BDB2,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xFFFB0997,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x9BDF289B,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x1D905A34,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xE58A9102,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xC37AEEF8,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x3D0F6255,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xB2304463,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x1D8B72A6,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x0FFAAECE,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x3210A038,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xCCFD14E9,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x6EDC6C68,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x85CCD177,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x43225A84,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x07B4BDA2,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x890F3008,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x2BD28D96,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x53504B14,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x1A103CCF,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xA37B149C,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x8B1A07EA,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xA9E57FD7,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x954DB8D0,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x2221E1B7,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x2A694968,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xA658DE6E,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x13847FC0,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xF18F6617,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x76C53AD9,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xF62B390F,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x0B91353D,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xCEB3BDB5,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x9A40C11A,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x68449D5D,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xDCF32A18,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x36ED4EA0,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xA60C60FE,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xFF36B49F,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xACB815B0,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xBA75AA43,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x8CA64A49,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x345540CD,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x7334FFF5,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xF61F568B,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xFBCDE658,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xD91BBDC8,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xD31E97D6,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x996F2CA5,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x5F53B986,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xE967BE51,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x48CD356D,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x1F831768,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xB8873823,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x8449C21F,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x56E936E5,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x30248191,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xEAB4CC75,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x1213E8C4,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x8F4A6468,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xD21228FC,4]
 RefScale=13
 Column 0  Sort=0v
 
