Update Scop class and add struct.hpp

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][scop]
-Pos=62,78
+Pos=111,75
 Size=337,453
 Collapsed=0
 
@@ -366,6 +366,14 @@ RefScale=13
 Column 0  Sort=0v
 
 [Table][0xD21228FC,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xC6DB1805,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x173DA1DC,4]
 RefScale=13
 Column 0  Sort=0v
 
