Fix camera movement and object reset

--- a/imgui.ini
+++ b/imgui.ini
@@ -377,3 +377,11 @@ Column 0  Sort=0v
 RefScale=13
 Column 0  Sort=0v
 
+[Table][0x26E6C956,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x696A4DC2,4]
+RefScale=13
+Column 0  Sort=0^
+
