Update object movement and calculate model center offset

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,8 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][scop]
-Pos=111,75
-Size=337,453
+Pos=203,191
+Size=325,439
 Collapsed=0
 
 [Window][Choose File##ChooseFileDlgKey]
@@ -384,4 +384,16 @@ Column 0  Sort=0v
 [Table][0x696A4DC2,4]
 RefScale=13
 Column 0  Sort=0^
+
+[Table][0xBED05BB0,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x8FDF5F77,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x42726D63,4]
+RefScale=13
+Column 0  Sort=0v
 
