Refactor code and add new resources

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][scop]
-Pos=203,191
+Pos=195,190
 Size=325,439
 Collapsed=0
 
@@ -394,6 +394,22 @@ RefScale=13
 Column 0  Sort=0v
 
 [Table][0x42726D63,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x02098CAA,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xF54AFD5F,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x92ADE5F2,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x8CC0DB13,4]
 RefScale=13
 Column 0  Sort=0v
 
