Update UI and load new texture file

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,13 +4,23 @@ Size=400,400
 Collapsed=0
 
 [Window][scop]
-Pos=191,191
-Size=325,439
+Pos=47,42
+Size=450,474
 Collapsed=0
 
 [Window][Choose File##ChooseFileDlgKey]
-Pos=856,408
-Size=499,348
+Pos=850,400
+Size=500,350
+Collapsed=0
+
+[Window][Choose File##ChooseTextureDlgKey]
+Pos=500,40
+Size=600,300
+Collapsed=0
+
+[Window][Choose File##ChooseObjDlgKey]
+Pos=500,40
+Size=600,300
 Collapsed=0
 
 [Table][0x0D7D13B5,4]
@@ -410,6 +420,42 @@ RefScale=13
 Column 0  Sort=0v
 
 [Table][0x8CC0DB13,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xC83E15ED,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x5B8E31A3,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xF33160E3,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x708851B8,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x520E9A93,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x4B999391,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x37EBAA18,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xCDB09244,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xB1C2ABCD,4]
 RefScale=13
 Column 0  Sort=0v
 
