Update positions and add toRadians function

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][scop]
-Pos=47,42
+Pos=45,45
 Size=450,474
 Collapsed=0
 
@@ -456,6 +456,18 @@ RefScale=13
 Column 0  Sort=0v
 
 [Table][0xB1C2ABCD,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xB876C7AC,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x622E8947,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x1E5CB0CE,4]
 RefScale=13
 Column 0  Sort=0v
 
