Fix lighting calculations and enable gradient display

--- a/imgui.ini
+++ b/imgui.ini
@@ -471,3 +471,31 @@ Column 0  Sort=0v
 RefScale=13
 Column 0  Sort=0v
 
+[Table][0xF21213D0,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x5D378A72,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x29AFB790,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x8275641A,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x3C6F9B74,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x6F2CAABA,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x2A98CD17,4]
+RefScale=13
+Column 0  Sort=0v
+
