Fix error handling in Scop constructor and loadbmpFile function

--- a/imgui.ini
+++ b/imgui.ini
@@ -499,3 +499,11 @@ Column 0  Sort=0v
 RefScale=13
 Column 0  Sort=0v
 
+[Table][0x6E894E52,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x12FB77DB,4]
+RefScale=13
+Column 0  Sort=0v
+
